--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@eslint/js": "^9.22.0",
     "eslint": "^9.22.0",
     "globals": "^16.0.0",
+    "prettier": "3.5.3",
     "vite": "^6.2.0"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1"
   }
 }
